--- a/frontend/src/Checkout.css
+++ b/frontend/src/Checkout.css
@@ -1,3 +1,6 @@
+.checkout{
+    position:relative;
+}
 .checkout_banner {
     width: 100%;
     z-index: -1;
@@ -7,19 +10,56 @@
    
   }
   .checkout_banner img {
-      width:100%;
-    mask-image: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 1),
-      80%,
-      rgba(0, 0, 0, 0)
-    );
-  }
+    width:100%;
+  mask-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 1),
+    80%,
+    rgba(0, 0, 0, 0)
+  );
+}
   .checkout_banner_heading {
     z-index: 8;
     color: lightgrey;
     position: absolute;
-    top: 25%;
+    top: 200px;
     left: 50%;
     transform: translate(-50%, -50%);
   }
+
+  .checkout_product {
+    font-family: "Montserrat", sans-serif;
+    font-size: 25px;
+    display: flex;
+    flex-direction: column;
+    z-index: 10;
+    background-color: lightgrey;
+    align-items: center;
+    border-radius: 10px;
+    opacity:0.95;
+    justify-content: flex-end;
+    margin: auto;
+    padding: 20px;
+    max-height: 400px;
+    min-width: 100px;
+    width:50%;
+
+    position:absolute;
+    top: 350px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    mask-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 1),
+    80%,
+    rgba(0, 0, 0, 1)
+    );
+  }
+  .checkout_product_info{
+    height:100px;
+    margin-bottom: 15px;
+}
+.checkout_total{
+    margin-top: 5px;
+}
