--- a/frontend/src/Subtotal.css
+++ b/frontend/src/Subtotal.css
@@ -1,3 +1,39 @@
-.subtotal{
-    z-index: 100;
+.subtotal {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 300px;
+  height: 100px;
+  padding: 20px;
+  align-items: center;
+
+  border-radius: 3px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 22px;
+  opacity: initial;
+}
+.subtotal_gift {
+  display: flex;
+  align-items: center;
+}
+.subtotal_gift > input {
+  margin-right: 5px;
+}
+.subtotal > button {
+  transition: background-color ease 400ms;
+  cursor: pointer;
+  border-radius: 2px;
+  width: 100%;
+  height: 30px;
+  border: 1px solid;
+  margin-top: 10px;
+  border-color: #a88734, #9c7e31, #846829;
+  color: #111;
+  border-radius: 25px;
+}
+
+.subtotal button:hover {
+  color: rgb(241, 10, 60);
+  background: white;
+  background: #f0c14b;
 }
