--- a/frontend/src/components/Product_component.css
+++ b/frontend/src/components/Product_component.css
@@ -1,41 +1,69 @@
 .product {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
-    width: 100%;
-    max-height: 400px;
-    min-width: 200px;
-    background-color: white;
-    margin: 10px;
-    padding: 20px;
-    z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 530px;
+  min-width: 200px;
+  background-color: white;
+  margin: 10px;
+  padding: 20px;
+  z-index: 109;
+  border-radius: 10px;
+  background-color: rgb(22, 21, 21);
+  color: white;
 }
-  
-  .product_info{
-      height:100px;
-      margin-bottom: 15px;
-  }
-  
-  .product_price{
-      margin-top: 5px;
-  }
-  
-  .product > button{
-      background: #f0c14b;
-      border :1px solid;
-      margin-top: 10px;
-      border-color: #a88734,#9c7e31, #846829;
-      color:#111;
-  }
-  .product_rating{
-      display:flex;
-  
-  }
-  .product > img {
-    width: 100%;
-    max-height: 200px;
-    object-fit: contain;
-    margin-bottom: 15px;
+
+.product_info {
+  height: 100px;
+  margin-bottom: 15px;
+  font-size: 15px;
 }
-  
+.product_name {
+  font-size: 25px;
+}
+.product_price {
+    font-size: 20px;
+  margin-top: 5px;
+}
+
+/* .buy_button > button {
+  background: #f0c14b;
+  border: 1px solid;
+  margin-top: 10px;
+  border-color: #a88734, #9c7e31, #846829;
+  color: #111;
+} */
+.buy_button {
+  padding-top: 5px;
+}
+.buy_button button {
+  background-color: transparent;
+  display: inline-block;
+  font-size: 15px;
+  color: white;
+  border: 1px solid #fff;
+  padding: 5px 5px;
+  border-radius: 15px;
+  font-family: "Montserrat", sans-serif;
+  cursor: pointer;
+  transition: background-color ease 400ms;
+}
+.buy_button button:hover {
+  color: black;
+  background: white;
+}
+.product_rating {
+  display: flex;
+}
+.product_graphics > img {
+  margin-top: 15px;
+  padding: 5px;
+  width: 100%;
+  max-height: 250px;
+  object-fit: contain;
+  margin-bottom: 15px;
+}
+.product_graphics {
+  align-items: center;
+}
