--- a/frontend/src/components/Shop.css
+++ b/frontend/src/components/Shop.css
@@ -1,29 +1,58 @@
-
-.shop_banner {
-    width: 100%;
-    z-index: -1;
-    margin-bottom: -150px;
-    font-family: "Montserrat", sans-serif;
-    font-size: 30px;
-   
-  }
-  .shop_banner img {
-    width:100%;
-  mask-image: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 1),
-    80%,
-    rgba(0, 0, 0, 0)
-  );
+.shop {
+  background-color: black;
 }
-  .shop_banner_heading {
-    z-index: 8;
-    color: lightgrey;
-    position: absolute;
-    top: 200px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-family: "Montserrat", sans-serif;
-    font-size: 30px;
+.shop_banner {
+  width: 100%;
+  z-index: -10;
+  margin-bottom: -150px;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 30px;
+}
+.shop_banner img {
+  width: 100%;
+}
+.shop_banner_heading {
+  z-index: 8;
+  color: lightgrey;
+  position: absolute;
+  top: 200px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
+}
+
+.shop_bar{
+    z-index: 11;
+    padding-bottom: 50px;
+}
+
+.shop_bar ul {
+    display: flex;
+    justify-content: space-evenly;
+    padding-top: 20px;
+    padding-bottom: 22px;
+    flex-direction: row;
+    align-content: center;
+   
+    
+    width: 100%;
+  }
+  .shop_bar ul li {
+    cursor: pointer;
+    list-style-type: none;
   }
   
+  .shop_bar a {
+    text-decoration: none;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-style: normal;
+    font-weight: light;
+    color:white;
+    font-size: 25px;
+    
+  }
+  .shop_bar a:hover{
+    color:rgb(116, 40, 65);
+  }
