--- a/frontend/src/Checkout.css
+++ b/frontend/src/Checkout.css
@@ -24,7 +24,7 @@ html {
   max-width: 1500px;
   margin: 0px;
   z-index: 10;
-  background-color: black;
+  padding-bottom:140px;
 }
 .home_row {
   display: flex;
