--- a/frontend/src/Footer.css
+++ b/frontend/src/Footer.css
@@ -1,7 +1,14 @@
-.footer{
+.footer_page{
     padding-top:50px;
     padding-bottom: 50px;
     background-color: white;
+    z-index: 20;
+
+    position: absolute;
+    left: 0;
+    bottom: 10;
+    width: 100%;
+    overflow: hidden;
 }
 .container{
     display:flex;
@@ -13,7 +20,7 @@
     color: black;
 
 }
-.container ul {
+.footer_container ul {
     display: flex;
     justify-content: space-evenly;
     padding-top: 20px;
