--- a/frontend/src/Footer_dark.css
+++ b/frontend/src/Footer_dark.css
@@ -1,4 +1,4 @@
-.footer{
+.footer_dark_page{
     padding-top:50px;
     padding-bottom: 50px;
     background-color: black;
@@ -14,7 +14,7 @@
     color: black;
 
 }
-.container ul {
+.footer_dark_container ul {
     display: flex;
     justify-content: space-evenly;
     padding-top: 20px;
