--- a/frontend/src/Subtotal.css
+++ b/frontend/src/Subtotal.css
@@ -1,38 +1,41 @@
-.subtotal {
-  display: flex !important ;
-  flex-direction: column !important ;
-  justify-content: space-between !important ;
-  width: 300px !important ;
-  height: 100px !important ;
-  padding: 20px !important ;
-  align-items: center !important ;
-  border-radius: 3px !important ;
-  font-family: Arial, Helvetica, sans-serif !important ;
-  font-size: 22px !important ;
-  opacity: initial !important ;
+.subtotal_page {
+  display: flex ;
+  flex-direction: column ;
+  justify-content: space-between ;
+  width: 300px ;
+  height: 100px ;
+  padding: 20px ;
+  align-items: center ;
+  border-radius: 3px ;
+  font-family: Arial, Helvetica, sans-serif ;
+  font-size: 22px ;
+  opacity: initial ;
+  padding-bottom: 100px;
 }
 .subtotal_gift {
-  display: flex !important ;
-  align-items: center !important ;
+  display: flex ;
+  align-items: center ;
 }
 .subtotal_gift > input {
-  margin-right: 5px !important ;
+  margin-right: 5px ;
 }
-.subtotal > button {
-  transition: background-color ease 400ms !important;
-  cursor: pointer !important;
-  border-radius: 2px !important;
-  width: 100% !important;
-  height: 30px !important;
-  border: 1px solid !important;
-  margin-top: 10px !important;
-  border-color: #a88734, #9c7e31, #846829 !important;
-  color: #111 !important;
-  border-radius: 25px !important;
+.subtotal_page > button {
+  transition: background-color ease 400ms ;
+  cursor: pointer ;
+  font-family: Arial, Helvetica, sans-serif ;
+  font-size: 20px;
+  border-radius: 2px ;
+  width: 100% ;
+  height: 30px ;
+  border: 1px solid ;
+  margin-top: 10px ;
+  border-color: #a88734, #9c7e31, #846829 ;
+  color: #111 ;
+  border-radius: 25px ;
 }
  
-.subtotal button:hover {
-  color: rgb(241, 10, 60) !important;
-  background: white !important;
-  background: #f0c14b !important;
+.subtotal_page button:hover {
+  color: rgb(241, 10, 60);
+  background: white;
+  background: #f0c14b;
 }
