--- a/frontend/src/Footer_dark.css
+++ b/frontend/src/Footer_dark.css
@@ -1,5 +1,5 @@
 .footer_dark_page{
-    padding-top:50px;
+    padding-bottom: 50px;
     padding-bottom: 50px;
     background-color: black;
     color:white;
