--- a/frontend/src/components/Product_component.css
+++ b/frontend/src/components/Product_component.css
@@ -23,7 +23,7 @@
   font-size: 25px;
 }
 .product_price {
-    font-size: 20px;
+  font-size: 20px;
   margin-top: 5px;
 }
 
@@ -48,6 +48,12 @@
   font-family: "Montserrat", sans-serif;
   cursor: pointer;
   transition: background-color ease 400ms;
+  margin-bottom: 5px;
+}
+.wishlist__icon {
+  margin-right: 20px;
+  display: inline-block;
+  cursor: pointer;
 }
 .buy_button button:hover {
   color: black;
@@ -67,6 +73,6 @@
 .product_graphics {
   align-items: center;
 }
-.wishlist{
-    display: flex;
+.wishlist {
+  display: flex;
 }
