--- a/frontend/src/Footer.css
+++ b/frontend/src/Footer.css
@@ -1,19 +1,16 @@
 .footer_page{
-    padding-top:50px;
-    padding-bottom: 50px;
-    background-color: white;
+    padding: 3rem;
+    background-color: rgb(231, 228, 228);
     z-index: 20;
 
     position: absolute;
     left: 0;
     bottom: 10;
+    right:0;
     width: 100%;
-    overflow: hidden;
+    
 }
-.container{
-    display:flex;
 
-}
 .line{
     height:1px;
     width:100%;
