--- a/frontend/src/Footer_dark.css
+++ b/frontend/src/Footer_dark.css
@@ -1,8 +1,13 @@
 .footer_dark_page{
-    padding-bottom: 50px;
-    padding-bottom: 50px;
+    padding:3rem;
     background-color: black;
     color:white;
+
+    position: absolute;
+    left: 0;
+    bottom: 10;
+    right:0;
+    width: 100%;
 }
 .container{
     display:flex;
