--- a/frontend/src/Subtotal.css
+++ b/frontend/src/Subtotal.css
@@ -2,8 +2,8 @@
   display: flex ;
   flex-direction: column ;
   justify-content: space-between ;
-  width: 300px ;
-  height: 100px ;
+  width: 500px ;
+  height: 10px ;
   padding: 20px ;
   align-items: center ;
   border-radius: 3px ;
@@ -25,13 +25,15 @@
   font-family: Arial, Helvetica, sans-serif ;
   font-size: 20px;
   border-radius: 2px ;
-  width: 100% ;
+  width: 250px ;
   height: 30px ;
   border: 1px solid ;
   margin-top: 10px ;
   border-color: #a88734, #9c7e31, #846829 ;
   color: #111 ;
   border-radius: 25px ;
+  padding-top:3px;
+  padding-bottom:3px;
 }
  
 .subtotal_page button:hover {
