--- a/frontend/src/components/Order_page.css
+++ b/frontend/src/components/Order_page.css
@@ -1,3 +1,6 @@
+.order{
+  background-color: black;
+}
 .order_banner {
     width: 100%;
     z-index: -1;
@@ -18,8 +21,52 @@
     z-index: 8;
     color: white;
     position: absolute;
-    top: 200px;
-    left: 50%;
+    top: 300px;
+    left: 62%;
     transform: translate(-50%, -50%);
   }
+
+  .scrollboxorder{
+    position: absolute;
+    top: 500px;
+    left: 62%;
+    transform: translate(-50%, -50%);
+  }
+  .order_home{
+    padding-bottom: 150px;
+  }
+  .scrollboxorder span{
+    display: block;
+    width: 20px;
+    height: 20px;
+    border-bottom: 2px solid white;
+    border-right: 2px solid white;
+    transform: rotate(45deg);
+    margin: -10px;
+    animation: animate 2s infinite;
+  }
   
+  .scrollboxorder span:nth-child(2)
+  {
+    animation-delay: -0.2s;
+  }
+  
+  .scrollboxorder span:nth-child(3)
+  {
+    animation-delay: -0.4s;
+  }
+  
+  @keyframes animate{
+    
+    0%{
+      opacity: 0;
+      transform: rotate(45deg) translate(-20px, -20px);
+    }
+    50%{
+      opacity: 1;
+    }
+    100%{
+      opacity: 0;
+      transform: rotate(45deg) translate(20px, 20px);
+    }
+  }
