--- a/frontend/src/components/Product_component.css
+++ b/frontend/src/components/Product_component.css
@@ -1,9 +1,9 @@
-.product {
+.product_comp {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 530px;
+  height: 580px;
   min-width: 200px;
   background-color: white;
   margin: 10px;
@@ -83,11 +83,23 @@
   padding-left: 10px;
   font-size: 13px;
   position: relative;
-  top:1px;
+  top:3px;
   left:0px;
 }
 .heart_button{
   position: relative;
   bottom:0px;
   left:4px;
+  top:3px;
+}
+.reviewpart{
+  display: flex;
+  position:relative;
+  left:4px;
+  top:4px;
+}
+.review_arrow{
+  position: relative;
+  left:4px;
+  bottom: 1px;
 }
