--- a/frontend/src/components/Order_component.css
+++ b/frontend/src/components/Order_component.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 530px;
+    height: 580px;
     min-width: 200px;
     background-color: white;
     margin: 10px;
@@ -76,4 +76,9 @@
   .wishlist {
     display: flex;
   }
-  
+  .reviewpart{
+    display: flex;
+    position:relative;
+    left:4px;
+    top:5px;
+  }
