--- a/frontend/src/Footer.css
+++ b/frontend/src/Footer.css
@@ -1,29 +1,29 @@
-.footer_page{
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-    background-color: rgb(231, 228, 228);
-    z-index: 20;
+.footer_page {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: rgb(231, 228, 228);
+  z-index: 20;
 
-    position: absolute;
-    left: 0;
-    bottom: 10;
-    right:0;
-    width: 100%;
-    
+  position: absolute;
+  left: 0;
+  bottom: 10;
+  right: 0;
+  width: 100%;
+
+  align-items: center;
 }
 
-
 .footer_container ul {
-    display: flex;
-    justify-content: space-evenly;
-    width: 90%;
-    align-content: center;
-    text-align: center;
-  
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    font-style: normal;
-    font-weight: light;
-    color: rgb(23, 23, 24);
-    list-style-type: none;
-  }
+  display: flex;
+  justify-content: space-evenly;
+  width: 90%;
+  align-content: center;
+  text-align: center;
+
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-style: normal;
+  font-weight: light;
+  color: rgb(23, 23, 24);
+  list-style-type: none;
+}
