--- a/frontend/src/Footer_dark.css
+++ b/frontend/src/Footer_dark.css
@@ -4,7 +4,7 @@
     background-color: black;
     color:white;
 
-    position: absolute;
+    position: relative;
     left: 0;
     bottom: 10;
     right:0;
